# job-search-simulator-Meta_hackerthon

./: Dockerfile  README.md  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
