[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-search-simulator"
version = "1.0.0"
description = "Job search environment for AI agents"
requires-python = ">=3.9"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
job-search-simulator = "server.app:main"
server = "server.app:main"          # ← REQUIRED by validator
